--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,9 @@
 
 cmake_minimum_required(VERSION 3.10)
 
+# Activer tous les avertissements de CMake
+set(CMAKE_WARN_DEPRECATED ON)
+set(CMAKE_SUPPRESS_DEVELOPER_WARNINGS OFF)
 # Nom du projet
 project(OpenGLWindow)
 
