world class constructor test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,11 @@ cmake_minimum_required(VERSION 3.10)
 # Activer tous les avertissements de CMake
 set(CMAKE_WARN_DEPRECATED ON)
 set(CMAKE_SUPPRESS_DEVELOPER_WARNINGS OFF)
+
+#version cmake 
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
 # Nom du projet
 project(OpenGLWindow)
 
